--- a/example/ios/SharedElementExample/Supporting/Expo.plist
+++ b/example/ios/SharedElementExample/Supporting/Expo.plist
@@ -3,14 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>EXUpdatesSDKVersion</key>
-	<string>42.0.0</string>
-	<key>EXUpdatesEnabled</key>
-	<false/>
+	<string>44.0.0</string>
 	<key>EXUpdatesURL</key>
 	<string>YOUR-APP-URL-HERE</string>
+	<key>EXUpdatesEnabled</key>
+	<true/>
+	<key>EXUpdatesLaunchWaitMs</key>
+	<integer>0</integer>
 	<key>EXUpdatesCheckOnLaunch</key>
-    <string>ALWAYS</string>
-    <key>EXUpdatesLaunchWaitMs</key>
-    <integer>0</integer>
+	<string>ALWAYS</string>
 </dict>
 </plist>
