--- a/example/package.json
+++ b/example/package.json
@@ -1,9 +1,9 @@
 {
   "main": "index.js",
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "test": "jest"
@@ -11,39 +11,34 @@
   "dependencies": {
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "expo": "^42.0.1",
-    "expo-linear-gradient": "^9.2.0",
-    "expo-splash-screen": "~0.11.2",
-    "expo-updates": "~0.8.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-fast-image": "^8.3.7",
-    "react-native-gesture-handler": "~1.10.2",
+    "expo": "^44.0.2",
+    "expo-linear-gradient": "^11.0.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "^1.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-pager-view": "^5.4.0",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-shared-element": "link:../",
-    "react-native-touchable-scale": "^2.1.1",
-    "react-native-unimodules": "~0.14.5",
-    "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-pager-view": "^5.4.9",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-screens": "~3.10.1",
+    "react-native-touchable-scale": "^2.1.2",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "~0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/react-native-vector-icons": "^6.4.8",
-    "babel-jest": "~25.2.6",
-    "babel-preset-expo": "8.3.0",
     "eslint": "^7.32.0",
-    "jest": "~25.2.6",
-    "metro-react-native-babel-preset": "~0.56.4",
-    "react-test-renderer": "~16.9.0",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "name": "example",
+  "version": "1.0.0"
 }
